Create an Admonition box for Day 2 guide prereqs
partial we can add to the Prerequisite sections of Day 2 operation
guides to refer readers to our Day 1 guides instead. This partial
mentions how to set up our Cloud and self-hosted products.

One tradeoff: since this partial will be used in a number of
directory locations, we can't use relative "*.mdx" links. Instead,
this uses relative links to the Teleport host URL root. We can
change these links again if we modify the link-parsing behavior
in our partials.

--- a/docs/pages/access-controls/guides/locking.mdx
+++ b/docs/pages/access-controls/guides/locking.mdx
@@ -40,6 +40,8 @@ A lock can target the following objects or attributes:
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 ## Step 1/2. Create a lock
 
 You can create a new lock with `tctl lock` command. Specify the lock target
