--- a/docs/pages/access-controls/guides/per-session-mfa.mdx
+++ b/docs/pages/access-controls/guides/per-session-mfa.mdx
@@ -40,6 +40,9 @@ Teleport certificates.
   https://developers.yubico.com/WebAuthn/WebAuthn_Browser_Support/) (if using
   SSH from the Teleport Web UI)
 
+(!docs/pages/includes/get-started.mdx!)
+
+
 ## Configuration
 
 Per-session MFA can be enforced cluster-wide or only for some specific roles.
