--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -24,6 +24,8 @@ Let's explore how Teleport's role templates provide a way to describe these and 
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 ## Local users
 
 Imagine you have two users, Alice and Bob. We would like to set the following
