--- a/docs/pages/setup/admin/adding-nodes.mdx
+++ b/docs/pages/setup/admin/adding-nodes.mdx
@@ -13,6 +13,8 @@ self-hosted or cloud editions.
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 <Admonition type="note">
 For cloud, login with a teleport user with editor privileges:
 ```code
