--- a/docs/pages/setup/admin/labels.mdx
+++ b/docs/pages/setup/admin/labels.mdx
@@ -13,6 +13,8 @@ self-hosted or cloud editions.
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 ## Labeling Nodes and Applications
 
 In addition to specifying a custom nodename, Teleport also allows for the
