--- a/docs/pages/setup/admin/users.mdx
+++ b/docs/pages/setup/admin/users.mdx
@@ -12,6 +12,8 @@ This guide covers inviting and managing local user accounts.
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 ## Adding and deleting users
 
 Teleport's local user accounts are created and stored in Teleport's internal storage.
