--- a/docs/pages/setup/guides/fluentd.mdx
+++ b/docs/pages/setup/guides/fluentd.mdx
@@ -16,6 +16,8 @@ This section will cover:
 - Fluentd version v(=fluentd.version=).
 - Docker version v(=docker.version=).
 
+(!docs/pages/includes/get-started.mdx!)
+
 ```code
 $ tctl version
 # Teleport v(=teleport.version=) go(teleport.golang)
