--- a/docs/pages/setup/operations/ca-rotation.mdx
+++ b/docs/pages/setup/operations/ca-rotation.mdx
@@ -8,6 +8,8 @@ description: How to rotate Teleport's certificate authority
 - Installed [Teleport](../../getting-started.mdx) or [Teleport Cloud](../../cloud/introduction.mdx) >= (=teleport.version=)
 - [Tctl admin tool](https://goteleport.com/teleport/download) >= (=teleport.version=)
 
+(!docs/pages/includes/get-started.mdx!)
+
 (!docs/pages/includes/tctl.mdx!)
 
 <Admonition type="note">
