--- a/docs/pages/access-controls/getting-started.mdx
+++ b/docs/pages/access-controls/getting-started.mdx
@@ -16,6 +16,8 @@ with creating your own role.
 - Installed [Teleport](../getting-started.mdx) or [Teleport Cloud](../cloud/introduction.mdx) >= (=teleport.version=)
 - [Tctl admin tool](https://goteleport.com/teleport/download) >= (=teleport.version=)
 
+(!docs/pages/includes/get-started.mdx!)
+
 (!docs/pages/includes/permission-warning.mdx!)
 
 (!docs/pages/includes/tctl.mdx!)
