--- a/docs/pages/access-controls/guides/impersonation.mdx
+++ b/docs/pages/access-controls/guides/impersonation.mdx
@@ -20,6 +20,8 @@ non-interactive CI/CD user Jenkins and a security scanner.
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 ## Step 1/3: Create a CI/CD user and corresponding role
 
 First, let's create a role called `jenkins`. Notice the `max_session_ttl`
