--- a/docs/pages/server-access/guides/ansible.mdx
+++ b/docs/pages/server-access/guides/ansible.mdx
@@ -17,6 +17,8 @@ and run a sample ansible playbook.
 - `ansible` >= (=ansible.min_version=)
 - Optional tool `jq` to process `JSON` output.
 
+(!docs/pages/includes/get-started.mdx!)
+
 ## Step 1/3. Login and configure SSH
 
 Log into Teleport with `tsh`:
