--- a/docs/pages/setup/admin/github-sso.mdx
+++ b/docs/pages/setup/admin/github-sso.mdx
@@ -14,6 +14,8 @@ self-hosted or cloud.
 
 (!docs/pages/includes/tctl.mdx!)
 
+(!docs/pages/includes/get-started.mdx!)
+
 <Admonition type="note">
 For cloud, login with a teleport user with editor privileges:
 ```code
