--- a/docs/pages/setup/guides/terraform-provider.mdx
+++ b/docs/pages/setup/guides/terraform-provider.mdx
@@ -14,6 +14,8 @@ This section will cover:
 - [Terraform >= (=terraform.version=)+](https://learn.hashicorp.com/tutorials/terraform/install-cli)
 - Teleport (=teleport.version=) Cloud, Open Source or Enterprise
 
+(!docs/pages/includes/get-started.mdx!)
+
 ```code
 $ terraform version
 # Terraform v(=terraform.version=)
